WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87072
Assertion failure when mouse points to a direct child text node of shadow root
https://bugs.webkit.org/show_bug.cgi?id=87072
Summary
Assertion failure when mouse points to a direct child text node of shadow root
Hayato Ito
Reported
2012-05-21 19:30:28 PDT
Let me quote the test case from
https://bugs.webkit.org/show_bug.cgi?id=86795#c3
. <div id="container"></div> <script> var shadowRoot = new WebKitShadowRoot(document.getElementById('container')); shadowRoot.innerHTML = 'a'; </script> Moving the cursor over the 'a' results in the following assert: ASSERTION FAILED: !m_node->isShadowRoot() ../../third_party/WebKit/Source/WebCore/dom/ComposedShadowTreeWalker.h(81) : void WebCore::ComposedShadowTreeWalker::assertPrecondition() const
Attachments
remove an assertion
(6.69 KB, patch)
2012-05-21 21:00 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.69 KB, patch)
2012-05-22 21:50 PDT
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2012-05-21 21:00:32 PDT
Created
attachment 143186
[details]
remove an assertion
Dimitri Glazkov (Google)
Comment 2
2012-05-22 09:24:32 PDT
Comment on
attachment 143186
[details]
remove an assertion View in context:
https://bugs.webkit.org/attachment.cgi?id=143186&action=review
> Source/WebCore/dom/ComposedShadowTreeWalker.cpp:57 > + // assertPrecondition();
We usually don't land commented code like this. Perhaps your FIXME description could mention it.
Hayato Ito
Comment 3
2012-05-22 18:57:43 PDT
Thank you for the review. (In reply to
comment #2
)
> (From update of
attachment 143186
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=143186&action=review
> > > Source/WebCore/dom/ComposedShadowTreeWalker.cpp:57 > > + // assertPrecondition(); > > We usually don't land commented code like this. Perhaps your FIXME description could mention it.
Okay. I'll mention that in FIXME. Let me land this after that, merging with ToT.
Hayato Ito
Comment 4
2012-05-22 21:50:09 PDT
Created
attachment 143458
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-05-22 22:39:37 PDT
Comment on
attachment 143458
[details]
Patch for landing Clearing flags on attachment: 143458 Committed
r118125
: <
http://trac.webkit.org/changeset/118125
>
WebKit Review Bot
Comment 6
2012-05-22 22:39:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug