Remove an assertion since an event's target might be a shadow root if a text node is clicked. https://bugs.webkit.org/show_bug.cgi?id=87072

Reviewed by Dimitri Glazkov.

Source/WebCore:

Tests: fast/dom/shadow/shadow-dom-event-dispatching.html

* dom/ComposedShadowTreeWalker.cpp:
(WebCore::ComposedShadowTreeWalker::ComposedShadowTreeWalker):

LayoutTests:

* fast/dom/shadow/shadow-dom-event-dispatching.html:


Canonical link: https://commits.webkit.org/104940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118125 268f45cc-cd09-0410-ab3c-d52691b4dbfc